<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".fragments.SignInFragment">

    <TextView
        android:id="@+id/signIn_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sign_in_text"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />


    <TextView
        android:id="@+id/enterEmailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_your_email"
        android:textColor="@color/dark_gray"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLift"
        app:layout_constraintTop_toBottomOf="@+id/signIn_textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_outline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintAnimationEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLift"
        app:layout_constraintTop_toBottomOf="@+id/enterEmailText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_Text"
            android:textColorHint="@color/gray"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_outline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hintAnimationEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@drawable/baseline_key_24"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLift"
        app:layout_constraintTop_toBottomOf="@+id/email_outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordText"
            android:textColorHint="@color/gray"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPassword_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password_tv"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/password_outline" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/sign_in_text_of_btn"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/btn_background_dark_gray"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLift"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword_tv" />
    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/gray"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/or_TextView"
        app:layout_constraintStart_toStartOf="@+id/guidelineLift"
        app:layout_constraintTop_toBottomOf="@id/signInBtn" />

    <TextView
        android:id="@+id/or_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/view1"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        android:text="@string/or_text"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toEndOf="@id/guidelineLift"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"/>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/view1"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/or_TextView"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/signInWithGoogleBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:gravity="center"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:layout_constraintStart_toEndOf="@id/guidelineLift"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/google_icon"
            android:contentDescription="@string/content_description_img_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google_text"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintStart_toEndOf="@id/guidelineLift"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight">

        <TextView
            android:id="@+id/NewToNewsFeedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_newsfeed_text"
            android:textColor="@color/dark_gray"/>

        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/register_text"
            android:textColor="@color/blue"
            android:textStyle="bold"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03872777" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96127223" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94890511" />

</androidx.constraintlayout.widget.ConstraintLayout>