<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".fragments.ForgotPasswordFragment">

    <TextView
        android:id="@+id/forgotPassword_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_password_text"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLift"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        android:textSize="20sp"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/enter_email_to_reset_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLift"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword_text"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/enter_email_to_reset_password"
        android:textColor="@color/dark_gray"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_to_reset_pass_outline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintAnimationEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLift"
        app:layout_constraintTop_toBottomOf="@+id/enter_email_to_reset_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_reset_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_Text"
            android:textColorHint="@color/gray"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendCodeBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:text="@string/send_code_text_of_btn"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/btn_background_dark_gray"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLift"
        app:layout_constraintTop_toBottomOf="@+id/email_to_reset_pass_outline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03872777" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96127223" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94890511" />
</androidx.constraintlayout.widget.ConstraintLayout>